<resources>
    <string name="app_name">SuitMedia</string>
    <string name="user_image">User Image</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="next">Next</string>
    <string name="check">Check</string>
    <string name="ispalindrome">isPalindrome</string>
    <string name="not_palindrome">not palindrome</string>
    <string name="palindrome_check">Palindrome Check</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="back_button">Back Button</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="retry">Retry</string>
    <string name="list_screen">List Screen</string>
</resources>