<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="16dp"
        tools:context=".ui.MainActivity">

    <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="116dp"
            android:layout_height="116dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_photo"
            android:contentDescription="@string/user_image"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.226" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:hintEnabled="false"
            android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/name"
                android:background="@drawable/rounded_input"
                android:maxLength="255" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_palindrome"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_name"
            app:layout_constraintStart_toStartOf="parent"
            app:hintEnabled="false"
            android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_palindrome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/palindrome"
                android:background="@drawable/rounded_input"
                android:maxLength="255" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btn_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check"
            app:backgroundTint="#2B637B"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_palindrome"
            android:layout_marginTop="50dp" />

    <Button

            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_check"
            app:backgroundTint="#2B637B" />
</androidx.constraintlayout.widget.ConstraintLayout>