<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.WelcomeActivity">


    <RelativeLayout

            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_marginStart="16dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                app:backgroundTint="@color/white"
                android:contentDescription="@string/back_button" />


        <TextView
                android:id="@+id/title"
                android:layout_width="136dp"
                android:layout_height="27dp"
                android:text="@string/welcome_screen"
                android:layout_centerInParent="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:lineSpacingExtra="0sp"
                android:textAlignment="center"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />


    </RelativeLayout>

    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C0C0C0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/header" />


    <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"

            android:textColor="@color/black"
            android:textSize="12sp"
            app:backgroundTint="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Username"
            android:layout_marginHorizontal="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:lineSpacingExtra="9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome" />


    <TextView
            android:id="@+id/tv_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_user_name"
            android:layout_marginHorizontal="16dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            android:lineSpacingExtra="9sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />


    <Button

            android:id="@+id/btn_choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_user"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:backgroundTint="#2B637B" />
</androidx.constraintlayout.widget.ConstraintLayout>